--- a/changelog.txt
+++ b/changelog.txt
@@ -1,33 +1,91 @@
-Ver.2.0への変更点
+******************
+ Ver.3.0への変更点
+******************
 
-1.バージョン定数 BASICIO_MAJOR_VER BASICIO_MINOR_VER を設けた
- + BASICIO_MAJOR_VER = 2
+WIRELESS SERIALの開発に伴い、より柔軟なコードが書けるようにした。
+
+1.バージョン定数
+ + BASICIO_MAJOR_VER = 3
  + BASICIO_MINOR_VER = 0
 
-2.32kHzオシレータの校正関数を追加
- + uint32_t wakeTimer_getCalibrationValue()
- + bool_t sleepCalibratedTimer(uint64_t milliSeconds, bool_t bRAMPower, uint32_t calibValue)
- + bool_t wakeTimer_isRunning()
- + uint64_t wakeTimer_readCount()
+2.シリアル0の初期化
+シリアル0 のハードウェアフロー制御はこれまで定数による宣言で有効にしていた。
+これをソフトウェアで初期化できるようにし、使用するタイマーも選択できるようにした。
+ + SERIAL_HW_FLOW_CONTROL 定数の廃止
+ + serial_initEx() のパラメータを変更
 
-3. xxx_printf()系関数を改良
- 意図しない改行が挿入される問題を修正するとともに対応書式の拡充
- これに関連して、
-  + serial_printf(), radio_printf() は内部的に sb_printf() を使用していたが、この３つを独立させることでバッファの共有(衝突)を無くした。
-  + serial_printf(), radio_printf(), 書き込み系の sb_XXX で返り値がvoidからbool_tとなり、エラーを返せるようになった。
+3.無線通信のショートアドレス対応
+これまで無線送信先はブロードキャストまたは getModuleAddress() で取得できる、固有のモジュールアドレスに送信する
+ことしかできなかったが、setup() 内で自分の12ビットショートアドレスを割り当てられるようにした。
+これによりハードウェア（モジュール）を意識する必要が無くなった。
+ + void radio_setupShortAddress() を追加
 
-4. radio_XXX 関数の見直し
- radio_xxx() 関数の初期化を定数宣言から setup() 内での初期化に変更。これにより起動時に無線通信モードを選択できるようになった。
- これにより、v1.0との互換性が失われています。
- 追加
-  + bool_t radio_setupInit(RADIOMODE mode, uint32_t appid, uint8_t channel, uint8_t txPower)
-  + bool_t radio_setRetry(uint8_t retryCount, uint16_t retryDuration)
- 廃止
-  + basicio_module.h 内の、USE_RADIO_TXONLY, APP_ID, CHANNEL, TX_POWER, TX_RETRY 定数を廃止
- その他
-  + radio_write(), radio_puts() のパラメータ u8DataType の位置を変更（統一）
-  + radio_attachCallback()で設定する受信コールバック関数の引数にブロードキャスト送信かどうかを示すパラメータを追加
+4.デジタル出力ピンのサポート
+DO0, DO1への出力関数を準備した。これでモノスティックの黄色LEDにアクセスできる
+ + do_enable() を追加
+ + do_write() を追加
 
-5.led_XXX 補助関数の追加
- 追加してみたものの、いいものではないので次期バージョンで削除します。
- ソースはありますがデフォルトでコンパイルされないのでバイナリサイズの無駄にはなりません。
+これに伴い、タイマー2,3のPWM,DAC出力もDO0,DO1に変更できるようにした。
+ + timer_attachPWM() のパラメータを変更
+ + timer_attachPWMByHzDuty() のパラメータを変更
+ + timer_attachAnalogWrite() のパラメータを変更
+
+5.無線通信のパケット制御の方法を提供
+これまで内部処理していた、送信ID設定と重複受信回避のアルゴリズムを必要に応じて変更できるようにした。
+ + void radio_setCbId(uint8_t u8CbId) を追加
+ + void radio_setRxGateCallback(bool_t (*gateFunc)(uint32_t u32SrcAddr, uint8_t u8CbId)) を追加
+
+6.シリアル通信の関数の変更
+ + serial_resetTx(), serial1_resetTx() 送信バッファのクリア関数を追加
+ + serial_resetRx(), serial1_resetRx() 受信バッファのクリア関数を追加
+ + serial_init(), serial1_init() のパラメータを簡素化
+
+7.シリアル関数で内部使用していた que_ 関数群を使用できるように表に出した（無所属）
+バイト単位のキューバッファを提供する
+
+8.独自のprintf()関数を作成できるように、myprintf() 関数をユーザーから使用できるようにした
+USE_PRINTF の宣言で使用可能に
+
+9.SPIに低レベル入出力関数を追加
+ + spi_select(), spi_deselect()
+ + spi_write8(), spi_write16(), spi_write32()
+ + spi_read8(), spi_read16(), spi_read32()
+
+10.rand()の名称がC標準関数とダブるのでrandom()に変更
+
+11.v2.0で追加したled_XXX関数群を削除
+使えないのでやめた
+
+12.バグフィックス
+ + 無線送信関数のパケットサイズを108バイトとしていたが、マニュアルに依ればアドレスモードにより可変であることがわかったため、
+ 　送信関数で動的に判断することにした。リファレンスでも上限値を説明しています。
+ + 無線送信リトライ回数が、成功の有無にかかわらず常に再送するようになっていたので廃止
+ + radio_printf() v2.0 の返り値の型間違いを修正 bool_t → int16_t
+ + コンパイルのワーニングメッセージ関連のコード修正
+
+
+********************************************
+ 互換性、v2.0 のソースコードを v3.0 で使うには
+********************************************
+
+ざっくりですが、以下のように変更。
+
+1. serial_init() はデフォルトでデフォルトピンを使うようにパラメータを省略しました。
+serial_init(SERIAL_BAUD_115200, FALSE)
+=> serial_init(SERIAL_BAUD_115200)
+セカンドピンを使用していた場合は、serial_initEx() を使用してください。
+
+2. serial_initEx() はハードウェアフロー制御用パラメータを追加しました。
+basicio.h 内の SERIALHWFLOWCONTROL 列挙型を参照してください。
+
+3. timer_attachPWM(), timer_attachPWMByHzDuty(), timer_attachAnalogWrite() の変更はコンパイルエラーにならないため、
+注意してください。
+timer_attachPWM(), timer_attachPWMByHzDuty() は後ろから２つ目のパラメータが、
+timer_attachAnalogWrite() は最後のパラメータが、
+bool_t 型から TIMEROPINSELECTION 列挙型に変わりました。
+FALSE => DEFAULT_PIN または、TRUE => SECOND_PIN に置き換えてください。
+
+4. rand() 関数は名称を変更しました。=> random()
+
+5. radio_printf() の返り値をチェックしている場合は、返り値の内容に間違いがあったので、リファレンスマニュアルで確認してください。
+
